--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 	<div class="container">
-		<div id="buttons">
-			<button id="play-rock">Kamień</button>
-			<button id="play-paper">Papier</button>
-			<button id="play-scissors">Nożyce</button>
+		<div  id="buttons">
+			<button class="btn" id="play-rock">Kamień</button>
+			<button class="btn" id="play-paper">Papier</button>
+			<button class="btn" id="play-scissors">Nożyce</button>
 		</div>
 		<div id="messages"></div>
 	</div>
