--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
 </head>
 <body>
 	<div class="container">
+		<h1>Welcome to game!</h1>
+		<h2>Сhoose your move!</h2>
 		<div  id="buttons">
-			<button class="btn" id="play-rock">Kamień</button>
-			<button class="btn" id="play-paper">Papier</button>
-			<button class="btn" id="play-scissors">Nożyce</button>
+			<button class="btn" id="play-rock">Rock</button>
+			<button class="btn" id="play-paper">Paper</button>
+			<button class="btn" id="play-scissors">Scissors</button>
 		</div>
 		<div id="messages"></div>
 	</div>
